# urfu-cv-lab

./: .gitmodules  CMakeLists.txt  readme.md
src/core/: compiler_version.cpp  compiler_version.h  cv.cpp  cv.h  gui.cpp  gui.h  lyssa.cpp  variables.cpp  variables.h
